Sun Oct  3 14:42:13 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* bin/mj_queuerun: Deal with failing access check.

Sat Oct  2 17:36:52 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* bin/mj_shell,bin/mj_email: Changes to stop processing if access
 	check was denied.

Fri Oct  1 17:50:16 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Majordomo.pm (connect): Check access (on 'access') and tell
 	the client to go away if necessary.

1999-08-25  Jason L Tibbitts III  <tibbs@math.uh.edu>

	* lib/Mj/Config.pm (parse_access_rules): Typo in file not found
	  warning.

	* lib/Majordomo.pm (_make_list): Dumb typo in list_file_get
	  callback function.

Fri Aug 20 00:01:42 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* setup/ask_domain.pl (ask_domain): Make sure the domain hash gets
 	initialized.

Thu Aug 19 23:22:32 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* setup/setup_func.pl (do_default_config): Fix problem with
 	initial addr_xforms value causing test failures.

Wed Aug 18 19:58:48 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* setup/setup_func.pl (do_default_config): Replace addr_xforms.

	* setup/ask_basic.pl (ask_basic): Ask about case smashing.

Thu Aug 12 00:33:58 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* Makefile.PL: Bump config file version.

	* setup/ask_basic.pl: Pretty up questions by adding some headers
 	and reorganizing a bit.

	* setup/setup_func.pl (do_default_config): Substitute confirm_url
 	setting into default configurations.

Wed Aug 11 21:40:32 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* setup/ask_basic.pl (ask_basic): Ask about URL to get to CGIs.

	* lib/Mj/SubscriberList.pm: Added id, remind and expires fields.

Sat Aug  7 11:04:17 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* setup/ask_domain.pl (ask_domain): Typo $fg -> $cfg.

Tue Aug  3 00:02:19 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>
