@@ -1,3 +1,11 @@
+Mon Oct 11 18:00:21 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>
+
+	* lib/Mj/Access.pm (list_access_check): Reorganization to allow
+ 	nonterminal rules.
+
+	* lib/Mj/CommandProps.pm: Add 'terminal' property to relevant
+ 	actions, add action_terminal function and make it exportable.
+
 Sun Oct  3 14:42:13 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>
 
 	* bin/mj_queuerun: Deal with failing access check.
